--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -221,3 +221,7 @@
 .aa-suggestion:hover, .aa-suggestion.aa-cursor {
     background-color: rgba(241, 241, 241, 0.35);
 }
+
+hr {
+    border-top: 1px solid #c7c7c7;
+}
